# LookScopes

./: .gitignore  LookScopes.uplugin
.cursor/: hooks.json  mcp.json
.cursor/agents/: architect.md  blueprint-designer.md  implementer.md  verifier.md
.cursor/hooks/: archive_plans.py  codebuddy_proxy.py  collect_experience.py  distill_knowledge.py  summarize_session.py
.cursor/rules/: distill-review.mdc  meta-agent-identity.mdc  plan-archiving.mdc  plan-lock-checkpoint.mdc  process-error-handling.mdc
.cursor/skills/antipatterns/: SKILL.md
.cursor/skills/code-review/: SKILL.md
.cursor/skills/code-standards/: SKILL.md
.cursor/skills/commit-conventions/: SKILL.md
.cursor/skills/computer-use/: SKILL.md
.cursor/skills/dev-workflow/: SKILL.md
.cursor/skills/step-by-step-design/: SKILL.md
AI/: TRAINING_PLAN.md  UE_INTEGRATION_PLAN.md  UE_PIPELINE_AUDIT.md  models_pytorch2.py  train.py
AI/models/: basis_lut_0.cube  basis_lut_1.cube  basis_lut_2.cube  lut_predictor_fp16.onnx  lut_predictor_fp32.onnx
DaVinciPlugin/: README.md
DaVinciPlugin/MCPServer/: .gitignore  pyproject.toml
DaVinciPlugin/MCPServer/davinci_mcp/: __main__.py  lut_engine.py  ndi_capture.py  resolve_bridge.py  server.py
DaVinciPlugin/NDIReceiver/: CMakeLists.txt  NDIReceiverPlugin.cpp  NDIReceiverPlugin.h
Docs/: DesignDoc.md  write_doc.py
Docs/distilled/: signal-buffer.md
Docs/distilled/metrics/: system-health.json
Docs/memory/daily/: 2026-04-17.md
Docs/memory/details/: .pending.md  2026-04-17.md
Docs/plans/: codebuddy-proxy-for-cursor.plan.md  content-intelligence-gateway.plan.md  cursor-subagent-design.plan.md  experience-collection-layer.plan.md  knowledge-application-layer.plan.md  knowledge-distillation-layer.plan.md  meta-learning-foundation.plan.md  meta-learning-plans-fix.plan.md  plan-auto-archive.plan.md  session-summary-via-cursor-hooks.plan.md  superpowers-enhancements.plan.md  system-agent-guardian.plan.md
Shaders/: AIDownsample.usf  BloomComposite.usf  BloomDownsample.usf  BloomTemporalBlend.usf  BloomUpsample.usf  BufferMaxReduce.usf  HistogramVisualizer.usf  LuminanceHistogram.usf  WaveformScope.usf
Source/LookScopes/: LookScopes.Build.cs
Source/LookScopes/Private/: AIColorGrader.cpp  AIGradingViewExtension.cpp  BloomRenderer.cpp  CustomBloomViewExtension.cpp  GPUScopeRenderer.cpp  LookScopes.cpp  LookScopesCommands.cpp  LookScopesSubsystem.cpp  LuminanceHistogramShader.cpp  SLookMatchPanel.cpp  SLuminanceScopeWidget.cpp  SScopeTextureDisplay.cpp  ScopeAnalyzer.cpp  ScopeSessionManager.cpp  ScopeShaders.cpp  ViewportCapture.cpp  ViewportStreamer.cpp
Source/LookScopes/Public/: AIColorGrader.h  AIGradingViewExtension.h  BloomRenderer.h  CustomBloomViewExtension.h  GPUScopeRenderer.h  LookScopes.h  LookScopesCommands.h  LookScopesSubsystem.h  SLookMatchPanel.h  (+8 more)
infra/hooks/: archive_plans.py  codebuddy_proxy.py  collect_experience.py  diagnose_hook.py  dialog_optimizer.py  dialog_optimizer_spec.md  distill_knowledge.py  hook_runner.py  summarize_session.py
infra/learning/: __init__.py
infra/memory/: __init__.py  detail_archiver.py  detail_collector.py  monthly_compress.py  pointer_injector.py  summary_generator.py
infra/memory-mcp/: memory-mcp.json  server.py
infra/shared/: __init__.py  ide_compat.py  llm_client.py  state.py  transcript_parser.py
